fixed spacing for headers in module boxes on mobile

--- a/src/assets/toolkit/styles/partials/_typography.scss
+++ b/src/assets/toolkit/styles/partials/_typography.scss
@@ -114,6 +114,17 @@ blockquote {
 	color: $red;
 	@include word-wrap;
 }
+.module-boxed .module-title:first-of-type {
+	margin-top: 0.2em;
+}
+// Spacing for headers in row layouts ------
+.row-container h1:first-of-type,
+.row-container h2:first-of-type,
+.row-container h3:first-of-type,
+.row-container h4:first-of-type,
+.row-container p:first-of-type {
+	margin-top: 0;
+}
 
 // ===================
 // Footer
